# shop_cards

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/apis/: base.py
app/apis/version1/: route_cards.py  route_login.py  route_main_methods.py  route_store_chains.py
app/core/: config.py  security.py
app/crawler/: chains_update.py  parse.py
app/db/: base.py  session.py
app/db/models/: cards.py  store_chains.py  stores.py  users.py
app/db/repository/: cards.py  store_chains.py  users.py
app/schemas/: cards.py  store_chains.py  users.py
