[tool.poetry]
name = "shop_cards"
version = "0.1.0"
description = ""
authors = ["ilya <dezdichado11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.35"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
